Fixed VM command issue Jenkinsfile